215833 Updated scripts to utilize new headless plug-in